# Nova-Induction-2020

./: README.md
src/turtles/: CMakeLists.txt  package.xml
src/turtles/launch/: turtles.launch
src/turtles/msg/: turtleQuality.msg
src/turtles/scripts/: publisher.py
src/turtles/src/: subscriber.cpp
