<?xml version="1.0"?>

<package format="2">

  <name>turtles</name>
  <version>0.0.0</version>
  <description>The turtles package</description>
  <maintainer email="liam.stow@outlook.com">Liam Stow</maintainer>
  <license>00Liam, licence to kill</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>

</package>
